--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     git:
       url: https://github.com/chornthorn/data_connection_checker.git
       ref: master
+  sqflite_sqlcipher: ^2.1.0
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
