--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -34,6 +34,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
 
+  mockito: ^5.0.8
+  build_runner: ^2.0.4
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
